finished task 1 and task 2 (for the most part)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# train and test sets
+train/*
+test/*
+
+# data (we need to download locally, too large)
+imdb62.tsv
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
